# youtube_clone

./: .dockerignore  docker-compose.yml  project-structure.txt
backend/: .env  Cargo.toml  backend.dockerfile  dockerfile
backend/src/: main.rs
backend/src/config/: db.rs
docker/: .env  docker-compose.yml
frontend/: dockerfile  package.json  tsconfig.json
frontend/src/: app.html
