[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4"
actix-cors = "0.6"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9.2"
bcrypt = "0.15"

# Environment variables
dotenv = "0.15"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
env_logger = "0.10"
log = "0.4"

# UUID handling
uuid = { version = "1.6", features = ["v4", "serde"] }

# DateTime
chrono = { version = "0.4", features = ["serde"] }

# File handling
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = "0.3"

[dev-dependencies]
tokio-test = "0.4"